# blog-service/docs/swagger.yaml
@@ -10,6 +10,42 @@ definitions:
     type: object
   errcode.Error:
     type: object
+  model.Article:
+    properties:
+      content:
+        type: string
+      cover_image_url:
+        type: string
+      created_by:
+        type: string
+      created_on:
+        type: integer
+      deleted_on:
+        type: integer
+      desc:
+        type: string
+      id:
+        type: integer
+      is_del:
+        type: integer
+      modified_by:
+        type: string
+      modified_on:
+        type: integer
+      state:
+        type: integer
+      title:
+        type: string
+    type: object
+  model.ArticleSwagger:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/model.Article'
+        type: array
+      pager:
+        $ref: '#/definitions/app.Pager'
+    type: object
   model.Tag:
     properties:
       created_by:
@@ -47,6 +83,148 @@ info:
   title: 博客系统
   version: "1.0"
 paths:
+  /api/v1/articles:
+    get:
+      parameters:
+      - description: 标签名称
+        in: query
+        maxLength: 100
+        name: title
+        type: string
+      - description: 描述
+        in: query
+        maxLength: 100
+        name: desc
+        type: string
+      - description: 文章内容
+        in: query
+        maxLength: 100
+        name: content
+        type: string
+      - description: 文章图片
+        in: query
+        maxLength: 100
+        name: coverImageURL
+        type: string
+      - description: 文章创建者
+        in: query
+        maxLength: 100
+        name: CreatedBy
+        type: string
+      - default: 1
+        description: 状态
+        enum:
+        - 0
+        - 1
+        in: query
+        name: state
+        type: integer
+      - default: 0
+        description: 是否删除
+        enum:
+        - 0
+        - 1
+        in: query
+        name: isDel
+        type: integer
+      - description: 页码
+        in: query
+        name: page
+        type: integer
+      - description: 每页数量
+        in: query
+        name: page_size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.ArticleSwagger'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取文章列表
+    post:
+      parameters:
+      - description: 标签名称
+        in: query
+        maxLength: 100
+        name: title
+        type: string
+      - description: 描述
+        in: query
+        maxLength: 100
+        name: desc
+        type: string
+      - description: 文章内容
+        in: query
+        maxLength: 100
+        name: content
+        type: string
+      - description: 文章图片
+        in: query
+        maxLength: 100
+        name: coverImageURL
+        type: string
+      - description: 文章创建者
+        in: query
+        maxLength: 100
+        name: createdBy
+        type: string
+      - default: 1
+        description: 状态
+        enum:
+        - 0
+        - 1
+        in: query
+        name: state
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.ArticleSwagger'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 创建文章
+  /api/v1/articles/:id:
+    get:
+      parameters:
+      - description: 文章id
+        in: query
+        name: id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.ArticleSwagger'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取文章
   /api/v1/tags:
     get:
       parameters:
@@ -130,6 +308,29 @@ paths:
           schema:
             $ref: '#/definitions/errcode.Error'
       summary: 新增标签
+  /api/v1/tags/:id:
+    get:
+      parameters:
+      - description: 标签id
+        in: query
+        name: id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功
+          schema:
+            $ref: '#/definitions/model.TagSwagger'
+        "400":
+          description: 请求错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+        "500":
+          description: 内部错误
+          schema:
+            $ref: '#/definitions/errcode.Error'
+      summary: 获取一个标签
   /api/v1/tags/{id}:
     delete:
       parameters:
